fixed name centering on small sizes

--- a/src/App.css
+++ b/src/App.css
@@ -90,9 +90,10 @@ body {
     font-family: "National2-Black";
     font-size: 55px;
     color: #27305e;
-    padding: 30px 0px 0px 50px;
+    padding: 30px 0px 0px 0px;
     margin-bottom: 0px;
-    text-align: start;
+    display: flex;
+    justify-content: center;
   }
 }
 
